2011-03-11  Tony Chang  <tony@chromium.org>

        Reviewed by Ojan Vafai.

        kill hung lighttpd processes on the chromium win bot
        https://bugs.webkit.org/show_bug.cgi?id=56152

        Sometimes this process doesn't exit and it holds on to
        a log file that we can't delete or copy, causing the tests
        to go red.

        * BuildSlaveSupport/win/kill-old-processes:

2011-03-11  Ilya Sherman  <isherman@chromium.org>

        Reviewed by Kent Tamura.

        [Chromium] missing HTMLInputElement::setValueForUser() to tests
        https://bugs.webkit.org/show_bug.cgi?id=55854

        * DumpRenderTree/chromium/LayoutTestController.cpp:
        (LayoutTestController::LayoutTestController):
        (LayoutTestController::setValueForUser): Added.
        * DumpRenderTree/chromium/LayoutTestController.h:

2011-03-10  Peter Kasting  <pkasting@google.com>

        Reviewed by Dimitri Glazkov.

        Clean up some gross code in TestShellWin.cpp.  No functional change.
        https://bugs.webkit.org/show_bug.cgi?id=56048

        * DumpRenderTree/chromium/TestShellWin.cpp:
        (checkLayoutTestSystemDependencies):

2011-03-10  Keith Kyzivat  <keith.kyzivat@nokia.com>

        Reviewed by Laszlo Gombos.

        [Qt] Buildfix for platforms where X11 is not available (e.g. Symbian)

        * WebKitTestRunner/InjectedBundle/qt/ActivateFontsQt.cpp:
        (WTR::activateFonts): Guard X11-specific code with Q_WS_X11.

2011-03-10  Gyuyoung Kim  <gyuyoung.kim@samsung.com>

        Reviewed by Kenneth Rohde Christiansen.

        [EFL] Make single backing store the default for EWebLauncher
        https://bugs.webkit.org/show_bug.cgi?id=55753

        Set single backing store the default for EWebLauncher.

        * EWebLauncher/main.c:
        (main):

2011-03-10  Adam Roben  <aroben@apple.com>

        Ignore errors from files being held open when creating a test result archive
