@@ -1,3 +1,12 @@
+2011-03-11  Adam Roben  <aroben@apple.com>
+
+        Roll out r80848
+
+        It was accidentally committed.
+
+        * BuildSlaveSupport/build.webkit.org-config/public_html/LeaksViewer/LeaksViewer.js:
+        (LeaksViewer._loadLeaksFromURL):
+
 2011-03-11  Tony Chang  <tony@chromium.org>
 
         Reviewed by Ojan Vafai.
